--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,8 +115,8 @@ blockquote {
 .card-modern:hover {transform: translateY(-5px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);}
 .card-modern p {font-size: 16px;color: #333;line-height: 1.6; margin-bottom: 15px;}
 
-.achiev_card .card-p20 .card-body .top-meta .date { text-decoration: none; outline: none; color: #050505;  }
-.achiev_card:hover, .achiev_card:active{ color: #1E90ff; text-decoration: none;  }
+.achiev_card .card-p20 .card-body .top-meta .date { text-decoration: none; outline: none; color: black;  }
+.achiev_card:hover, .achiev_card:active{ color: black; text-decoration: none;  }
 .about-links .btn-primary { background-color: #1E90ff; color: #fff; padding: 10px 20px; border-radius: 4px; text-decoration: none;font-size: 16px;font-weight: bold;transition: background-color 0.3s ease, box-shadow 0.3s ease;display: flex;align-items: center; justify-content: center; position: relative;}
 .about-links .btn-primary:hover {box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);}
 .about-links .btn-primary::after {content: "";position: absolute;width: 0;height: 2px;background: #fff;bottom: 0;left: 50%;transform: translateX(-50%) scaleX(0);transform-origin: center;transition: transform 0.3s ease-in-out;}
